ESM-547 - Change User to Contact

--- a/modules/core/client/views/add-user-context-gear.html
+++ b/modules/core/client/views/add-user-context-gear.html
@@ -3,4 +3,4 @@
     ng-if="context.userCan.addUsersToContext" 
     x-add-user-to-context-modal 
     x-context="context" 
-    x-role="role"><span class="glyphicon glyphicon-plus"></span><span>Add User</span></a>
+    x-role="role"><span class="glyphicon glyphicon-plus"></span><span>Add Contact</span></a>
