--- a/modules/users/client/views/users-partials/users-by-org-list.html
+++ b/modules/users/client/views/users-partials/users-by-org-list.html
@@ -18,9 +18,7 @@
             <td ng-if="usersByOrg.mode !== 'display'"><a class="btn btn-default btn-xs" ng-click="usersByOrg.removeUser(user._id)"><i class="glyphicon glyphicon-minus-sign"></i> Remove</a></td>
         </tr>
     </table>
-    <a href x-modal-select-users ng-if="usersByOrg.mode !== 'display'" class="btn btn-default btn-sm">Add User</a>
-
-
+    <a href x-modal-select-users ng-if="usersByOrg.mode !== 'display'" class="btn btn-default btn-sm">Add Contact</a>
     <hr/>
 
 </section>
