--- a/modules/utils/client/views/partials/modal-users-select.html
+++ b/modules/utils/client/views/partials/modal-users-select.html
@@ -129,7 +129,7 @@
 						<button class="btn btn-block btn-sm btn-layer" ng-click="utilUsers.removeUserFromSelected(user)">{{ user.displayName || user.username || user.email }} <em class="small">{{ user.email }}</em></button>
 					</li>
 					<li class="no-lower-padding small" ng-if="selectedFiltered.length === 0">
-						Select users from the left column to add them to this group.
+						Select contacts from the left column to add them to this group.
 					</li>
 				</ul>
 			</div>
