--- a/modules/core/client/views/add-user-context-modal.html
+++ b/modules/core/client/views/add-user-context-modal.html
@@ -1,10 +1,10 @@
 <div class="modal-header">
 	<button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
-	<h3 class="modal-title">Add User &nbsp;&rsaquo;&nbsp; {{s.name}}</h3>
+	<h3 class="modal-title">Add Contact &nbsp;&rsaquo;&nbsp; {{s.name}}</h3>
 </div>
 
 <div class="modal-body">
-	<label for="user">Select a User</label>
+	<label for="user">Select a Contact</label>
 	<select class="form-control" id="user" ng-model="s.currentUser">
     <option ng-repeat="p in s.allUsers" ng-value="p.username">{{p.displayName ? p.displayName + ' - ' + p.username : p.username}}</option>
   </select>
