--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -15,12 +15,12 @@
 	<!-- SET BY USERS -->
 	<div class="tab-pane" ng-show="s.userView">
 		<div class="form-group select-permission">
-			<label class="control-label">Select User</label>
+			<label class="control-label">Select Contact</label>
 			<select class="form-control" id="user" ng-model="s.currentUser" ng-options="p as p for p in s.allUsers | orderBy"></select>
 			<tmpl-add-user-to-context context="s.context" role="s.defaultRole"></tmpl-add-user-to-context>
 		</div>
 		<div class="form-group manage-permission no-margin">
-			<label class="control-label">Manage Roles for Users</label>
+			<label class="control-label">Manage Roles for Contacts</label>
 			<tmpl-role-new context="s.context" class="new-role-btn" ng-if="s.context.userCan.createRole"></tmpl-role-new>
 		</div>
 		<div class="panel panel-default">
@@ -47,7 +47,7 @@
 			<tmpl-role-new context="s.context" ng-if="s.context.userCan.createRole"></tmpl-role-new>
 		</div>
 		<div class="form-group manage-permission no-margin">
-			<label class="control-label">Manage Users for Role</label>
+			<label class="control-label">Manage Contacts for Role</label>
 			<tmpl-add-user-to-context class="new-role-btn" context="s.context" role="s.defaultRole" ng-if="s.context._id !== 'application'"></tmpl-add-user-to-context>
 		</div>
 		<div class="panel panel-default">
