--- a/modules/organizations/client/views/organization-view.html
+++ b/modules/organizations/client/views/organization-view.html
@@ -1,6 +1,6 @@
 
 	<div class="view-title-container flex-row">
-		<h1>Organizations<span ng-show="org.name">&nbsp; &rsaquo; &nbsp;{{ org.name }}</span></h1>
+		<h1>Organizations <span ng-if="org.name">&nbsp;&rsaquo;&nbsp; {{ org.name }}</span></h1>
 		<div class="actions">
 			<a class="btn btn-sm btn-default" ui-sref="admin.organization.edit({orgId: org._id})"><span class="glyphicon glyphicon-pencil"></span><span>Edit</span></a>
 		</div>
@@ -24,7 +24,7 @@
 				<a href="#orgDetails" aria-controls="home" role="tab" data-toggle="tab">Organization Details</a>
 			</li>
     		<li role="presentation">
-				<a href="#orgUsers" aria-controls="profile" role="tab" data-toggle="tab">Users</a>
+				<a href="#orgUsers" aria-controls="profile" role="tab" data-toggle="tab">Contacts</a>
 			</li>
 		</ul>
 
@@ -32,105 +32,103 @@
 			
 			<!-- DETAILS TAB CONTENT -->
 			<div class="tab-pane active" id="orgDetails" role="tabpanel">
-				<div class="row" >
-					<div class="col-sm-8">
-						<div class="form-group">
-							<label for="name" class="control-label">Organization Name</label>
-							<p class="form-control-static">{{ org.name }}</p>
+
+				<fieldset>
+					<legend>General Info</legend>
+					<div class="row" >
+						<div class="col-md-3">
+							<div class="form-group">
+								<label for="name" class="control-label">Organization Name</label>
+								<p class="form-control-static">{{ org.name }}</p>
+							</div>
 						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="form-group">
-							<label for="website" class="control-label">Website</label>
-							<p class="form-control-static">{{ org.website }}</p>
-						</div>
-					</div>
-				</div>
-				<div ng-show="expandOrgView">
-					<div class="row">
-						<div class="col-sm-8">
+						<div class="col-md-3">
 							<div class="form-group">
 								<label for="company" class="control-label">Doing Business As</label>
 								<p class="form-control-static">{{ org.company }}</p>
 							</div>
 						</div>
-						<div class="col-sm-4">
-							<div class="form-group">
-								<label for="registeredIn" class="control-label">Registered In</label>
-								<p class="form-control-static">{{ org.registeredIn }}</p>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-8">
+						<div class="col-md-3">
 							<div class="form-group">
 								<label for="companyLegal" class="control-label">Company Legal</label>
 								<p class="form-control-static">{{ org.companyLegal }}</p>
 							</div>
 						</div>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<div class="form-group">
 								<label for="companyType" class="control-label">Company Type</label>
 								<p class="form-control-static">{{ org.companyType }}</p>
 							</div>
 						</div>
 					</div>
-
-					<hr>
-
-					<div class="row">
-						<div class="col-sm-6">
-							<div class="form-group">
-								<label for="address1" class="control-label">Address (Line 1)</label>
-								<p class="form-control-static">{{ org.address1 }}</p>
-							</div>
-						</div>    
-						<div class="col-sm-6">
-							<div class="form-group">
-								<label for="address2" class="control-label">Address (Line 2)</label>
-								<p class="form-control-static">{{ org.address2 }}</p>
-							</div>
-						</div>
-					</div>
 					<div class="row">
 						<div class="col-sm-3">
 							<div class="form-group">
-								<label for="city" class="control-label">City</label>
-								<p class="form-control-static">{{ org.city }}</p>
-							</div>
-						</div>    
-						<div class="col-sm-3">
-							<div class="form-group">
-								<label for="province" class="control-label">Province</label>
-								<p class="form-control-static">{{ org.province }}</p>
+								<label for="registeredIn" class="control-label">Registered In</label>
+								<p class="form-control-static">{{ org.registeredIn }}</p>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="form-group">
-								<label for="country" class="control-label">Country</label>
-								<p class="form-control-static">{{ org.country }}</p>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="form-group">
-								<label for="postal" class="control-label">Postal Code</label>
-								<p class="form-control-static">{{ org.postal }}</p>
+								<label for="website" class="control-label">Website</label>
+								<p class="form-control-static">{{ org.website }}</p>
 							</div>
 						</div>
 					</div>
-				</div>
-						
-				<div class="form-footer clearfix">
-					<a class="btn btn-default pull-left hidden" ui-sref="admin.organization.list">Cancel</a>
-					<a ng-if="showedit" class="btn btn-default pull-right" ui-sref="admin.organization.edit({orgId: org._id})">Edit Details</a>
-				</div>
+				</fieldset>
+
+				<fieldset>
+					<legend>Mailing Address</legend>
+					<div ng-show="expandOrgView">
+						<div class="row">
+							<div class="col-sm-3">
+								<div class="form-group">
+									<label for="city" class="control-label">City</label>
+									<p class="form-control-static">{{ org.city }}</p>
+								</div>
+							</div>    
+							<div class="col-sm-3">
+								<div class="form-group">
+									<label for="province" class="control-label">Province</label>
+									<p class="form-control-static">{{ org.province }}</p>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="form-group">
+									<label for="country" class="control-label">Country</label>
+									<p class="form-control-static">{{ org.country }}</p>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="form-group">
+									<label for="postal" class="control-label">Postal Code</label>
+									<p class="form-control-static">{{ org.postal }}</p>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-sm-12 col-md-6">
+								<div class="form-group">
+									<label for="address1" class="control-label">Address (Line 1)</label>
+									<p class="form-control-static">{{ org.address1 }}</p>
+								</div>
+							</div>    
+							<div class="col-sm-12 col-md-6">
+								<div class="form-group">
+									<label for="address2" class="control-label">Address (Line 2)</label>
+									<p class="form-control-static">{{ org.address2 }}</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</fieldset>
 			</div><!-- / DETAILS TAB CONTENT -->
 			
 			<!-- USERS TAB CONTENT -->
 			<div class="tab-pane" id="orgUsers" role="tabpanel">
 				<div class="button-bar clearfix">
 					<a class="btn btn-default btn-sm pull-left" ui-sref="admin.organization.user.create({orgId: org._id})">
-						<span class="glyphicon glyphicon-plus"></span><span>Add User</span>
+						<span class="glyphicon glyphicon-plus"></span><span>Add Contact</span>
 					</a>
 					<div class="pull-right">
 						<show-filter x-toggle-filter="toggleFilter"></show-filter>
@@ -139,8 +137,8 @@
 				<div class="panel panel-default">
 					<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
 						<tr ng-repeat="o in $data" class='clickable' ui-sref="admin.organization.user.detail({orgId: org._id, userId: o._id})">
-							<td data-title="'Name'"  filter="{'displayName':'text'}"   sortable="'displayName'">{{o.displayName}}</td>
-							<td data-title="'Username'"  filter="{'username':'text'}"   sortable="'username'">{{o.username}}</td>
+							<td data-title="'Name'"  filter="{'displayName':'text'}" sortable="'displayName'">{{o.displayName}}</td>
+							<td data-title="'Username'"  filter="{'username':'text'}" sortable="'username'">{{o.username}}</td>
 							<td data-title="'Email'" filter="{'email':'text'}"    sortable="'email'" >{{o.email}}</td>
 							<td class="actions-col action-x1" header-class="'actions-col action-x1'">
 								<a ng-click="$event.stopPropagation()" class="btn btn-link btn-sm" ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
