--- a/modules/users/client/views/user-invitation-chooser.html
+++ b/modules/users/client/views/user-invitation-chooser.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
 	<button type="button" class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">&times;</span></button>
-	<h3 class="modal-title">{{s.title || 'Select Users'}}</h3>
+	<h3 class="modal-title">{{s.title || 'Select Contacts'}}</h3>
 </div>
 
 <div class="modal-body">
