--- a/modules/project-irs/client/views/ir-add-action.html
+++ b/modules/project-irs/client/views/ir-add-action.html
@@ -27,7 +27,7 @@
 				x-modal-date-picker 
 				x-selected-date="selected.date" 
 				ng-model="selected.date">
-				{{ selected.date | amDateFormat:'MMMM Do, YYYY' }}
+				{{ selected.date | amDateFormat:'MMM Do, YYYY' }}
 				<span class="glyphicon glyphicon-calendar"></span>
 			</div>
 		</div>
