--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -39,7 +39,7 @@
 							x-modal-date-picker
 							x-selected-date="ir.irDate"
 							ng-model="ir.irDate">
-							{{ ir.irDate | amDateFormat:'MMMM Do, YYYY' }}
+							{{ ir.irDate | amDateFormat:'MMM Do, YYYY' }}
 							<span class="glyphicon glyphicon-calendar"></span>
 						</div>
 					</div>
@@ -143,7 +143,7 @@
 					<td class="date-col"
 						header-class="'date-col'"
 						data-title="'Date Issued'"
-						sortable="'date'">{{o.date | date:'MMM dd, yyyy'}}</td>
+						sortable="'date'">{{o.date | amDateFormat:'MMM Do, YYYY'}}</td>
 					<td class="actions-col action-x2"
 						header-class="'actions-col action-x2'">
 						<a class="btn btn-default btn-sm" ng-click="openAddEnforcementAction(o);$event.stopPropagation()">
