ESM-510: Prevent upload until all fields are filled out and valid.

--- a/modules/documents/client/views/partials/modal-document-upload-classify.html
+++ b/modules/documents/client/views/partials/modal-document-upload-classify.html
@@ -10,5 +10,13 @@
 <div class="modal-footer">
 	<button ng-if="docUploadModal.uploading" disabled class="btn btn-default disabled" type="button">Cancel</button>
 	<button ng-if="!docUploadModal.uploading" class="btn btn-default" type="button" ng-click="docUploadModal.cancel()">Cancel</button>
-	<button class="btn btn-primary" type="button" ng-click="docUploadModal.uploading || docUploadModal.ok()">OK</button>
+    <button
+        ng-if="docUploadModal.enableUpload"
+        class="btn btn-primary"
+        type="button"
+        ng-click="docUploadModal.uploading || docUploadModal.ok()">OK</button>
+    <button
+        ng-if="!docUploadModal.enableUpload"
+        class="btn btn-primary disabled"
+        type="button">OK</button>
 </div>
